Change profile image format from jpg to jpeg

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <main>
         <div class="profile-section">
-            <img src="assets/images/profile.jpg" alt="Elif Kilic" class="profile-img">
+            <img src="assets/images/profile.jpeg" alt="Elif Kilic" class="profile-img">
             
             <h1>Elif Kilic</h1>
             <p class="title">Climate Researcher & Data Scientist</p>
