--- a/index.html
+++ b/index.html
@@ -226,12 +226,25 @@
             </div>
             
             <!-- ClimaCoder Dropdown -->
+           <!-- ClimaCoder Dropdown -->
             <div class="dropdown">
                 <a href="/climacoder.html">ClimaCoder</a>
                 <div class="dropdown-content">
-                    <a href="/climacoder/writing.html">Writing</a>
-                    <a href="/climacoder.html#overview">Overview</a>
                     <a href="/climacoder.html#team">Team</a>
+                    <div class="dropdown-submenu">
+                        <a href="#">Research ▸</a>
+                        <div class="dropdown-submenu-content">
+                            <a href="/climacoder/countries/belize.html">Belize</a>
+                            <a href="/climacoder/countries/guatemala.html">Guatemala</a>
+                            <a href="/climacoder/countries/honduras.html">Honduras</a>
+                            <a href="/climacoder/countries/el-salvador.html">El Salvador</a>
+                            <a href="/climacoder/countries/nicaragua.html">Nicaragua</a>
+                            <a href="/climacoder/countries/costa-rica.html">Costa Rica</a>
+                            <a href="/climacoder/countries/panama.html">Panama</a>
+                            <a href="/climacoder/countries/mexico.html">Mexico</a>
+                        </div>
+                    </div>
+                    <a href="/climacoder/writing.html">Writing</a>
                 </div>
             </div>
         </nav>
