--- a/climacoder.html
+++ b/climacoder.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elif Kilic – ClimaCoder</title>
+    <title>ELİF KILIÇ – ClimaCoder</title>
     <style>
         * {
             margin: 0;
@@ -213,7 +213,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">Elif Kilic</a>
+            <a href="/" class="logo">ELİF KILIÇ</a>
             
             <!-- Bio Dropdown -->
             <div class="dropdown">
@@ -290,7 +290,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> Elif Kilic. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
     </footer>
 
     <script>
