Update name to use uppercase letters

--- a/climacoder/writing.html
+++ b/climacoder/writing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elif Kilic – Heat Stress & Vulnerability Writing</title>
+    <title>ELİF KILIÇ – Heat Stress & Vulnerability Writing</title>
     <style>
         * {
             margin: 0;
@@ -271,7 +271,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">Elif Kilic</a>
+            <a href="/" class="logo">ELİF KILIÇ</a>
             
             <div class="dropdown">
                 <a href="/bio.html">Bio</a>
@@ -484,7 +484,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> Elif Kilic. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
     </footer>
 
     <script>
