--- a/climacoder/countries/belize.html
+++ b/climacoder/countries/belize.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belize Heat Vulnerability Dashboard | Elif Kilic</title>
+    <title>Belize Heat Vulnerability Dashboard | ELİF KILIÇ</title>
     <style>
         * {
             margin: 0;
@@ -258,7 +258,7 @@
 <body>
     <header>
         <nav>
-            <a href="/" class="logo">Elif Kilic</a>
+            <a href="/" class="logo">ELİF KILIÇ</a>
             
             <div class="dropdown">
                 <a href="/bio.html">Bio</a>
@@ -376,7 +376,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> Elif Kilic. All rights reserved.</p>
+        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
     </footer>
 
     <script>
