--- a/tings.html
+++ b/tings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Animations | Elif Kilic</title>
+  <title>Animations | ELİF KILIÇ</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .grid {
