--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
                 <a href="/bio.html">Bio</a>
                 <div class="dropdown-content">
                     <a href="/bio.html">About Me</a>
-                    <a href="/bio.html#education">Education</a>
-                    <a href="/bio.html#experience">Experience</a>
+                    <a href="/bio/teaching.html">Teaching</a>  <!-- Add this line -->
                     <a href="/assets/cv.pdf">Download CV</a>
                 </div>
             </div>
