--- a/research/publications.html
+++ b/research/publications.html
@@ -1,27 +1,398 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Pulications | Elif Kilic</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publications / Presentations | ELİF KILIÇ</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background: #fafafa;
+        }
+
+        header {
+            background: white;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        nav {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 1rem 2rem;
+            display: flex;
+            gap: 2rem;
+            align-items: center;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #0066cc;
+        }
+
+        nav .logo {
+            font-weight: 700;
+            font-size: 1.2rem;
+            margin-right: auto;
+        }
+
+        /* Dropdown container */
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        /* Dropdown button */
+        .dropdown > a {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 0.3rem;
+            padding: 0.5rem 0;
+        }
+
+        .dropdown > a::after {
+            content: '▼';
+            font-size: 0.7rem;
+            transition: transform 0.3s;
+        }
+
+        .dropdown:hover > a {
+            color: #0066cc;
+        }
+
+        .dropdown:hover > a::after {
+            transform: rotate(180deg);
+        }
+
+        /* Dropdown content */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: white;
+            min-width: 200px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+            border-radius: 8px;
+            margin-top: 0.25rem;
+            padding: 0.5rem 0;
+            z-index: 1000;
+        }
+
+        /* Add padding to dropdown area for easier hovering */
+        .dropdown::before {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            height: 0.25rem;
+            z-index: 999;
+        }
+
+        .dropdown-content a {
+            color: #333;
+            padding: 0.8rem 1.5rem;
+            text-decoration: none;
+            display: block;
+            font-weight: 400;
+            transition: background 0.2s;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #f5f5f5;
+            color: #0066cc;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+            animation: fadeIn 0.2s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-5px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Nested dropdown (submenu) */
+        .dropdown-submenu {
+            position: relative;
+        }
+
+        .dropdown-submenu > a::after {
+            content: ' ▸';
+            float: right;
+        }
+
+        .dropdown-submenu-content {
+            display: none;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            background-color: white;
+            min-width: 180px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+            border-radius: 8px;
+            padding: 0.5rem 0;
+            z-index: 1001;
+        }
+
+        .dropdown-submenu:hover .dropdown-submenu-content {
+            display: block;
+            animation: fadeIn 0.2s ease-in;
+        }
+
+        .dropdown-submenu-content a {
+            color: #333;
+            padding: 0.6rem 1.5rem;
+            text-decoration: none;
+            display: block;
+            font-weight: 400;
+            transition: background 0.2s;
+            font-size: 0.95rem;
+        }
+
+        .dropdown-submenu-content a:hover {
+            background-color: #f5f5f5;
+            color: #0066cc;
+        }
+
+        main {
+            max-width: 1000px;
+            margin: 4rem auto;
+            padding: 2rem;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #1a1a1a;
+            text-align: center;
+        }
+
+        .intro {
+            font-size: 1.1rem;
+            line-height: 1.8;
+            color: #444;
+            margin-bottom: 3rem;
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+            text-align: center;
+        }
+
+        .section-title {
+            font-size: 1.8rem;
+            color: #1a1a1a;
+            margin: 3rem 0 1.5rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 3px solid #0066cc;
+        }
+
+        .publication-list {
+            display: grid;
+            gap: 2rem;
+        }
+
+        .publication-card {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .publication-card:hover {
+            transform: translateY(-4px);
+            box-shadow: 0 8px 24px rgba(0,0,0,0.12);
+        }
+
+        .publication-card h3 {
+            font-size: 1.3rem;
+            color: #0066cc;
+            margin-bottom: 0.8rem;
+        }
+
+        .publication-meta {
+            color: #666;
+            font-size: 0.95rem;
+            margin-bottom: 1rem;
+        }
+
+        .publication-card p {
+            font-size: 1.05rem;
+            line-height: 1.7;
+            color: #555;
+            margin-bottom: 1rem;
+        }
+
+        .publication-link {
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            background: #0066cc;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-size: 0.95rem;
+            transition: background 0.3s;
+        }
+
+        .publication-link:hover {
+            background: #0052a3;
+        }
+
+        footer {
+            background: white;
+            margin-top: 4rem;
+            padding: 2rem;
+            text-align: center;
+            border-top: 1px solid #e0e0e0;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="publications.html">Publications</a></li>
-        <li><a href="animations.html">Animations</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <a href="/" class="logo">ELİF KILIÇ</a>
 
-  <main>
-    <h1>Publications</h1>
-    <ul>
-      <li><strong>Cool Visualization</strong> – A D3 animation of planetary orbits</li>
-      <li><strong>AI-Powered Poem Generator</strong> – Write poems using GPT</li>
-    </ul>
-  </main>
+            <!-- Bio Dropdown -->
+            <div class="dropdown">
+                <a href="/bio.html">Bio</a>
+                <div class="dropdown-content">
+                    <a href="/bio.html">About Me</a>
+                    <a href="/bio/projects.html">Projects</a>
+                    <a href="/bio/teaching.html">Teaching</a>
+                </div>
+            </div>
+
+            <!-- Research Dropdown -->
+            <div class="dropdown">
+                <a href="/research.html">Research</a>
+                <div class="dropdown-content">
+                    <a href="/research/heatindex.html">Extended Heat Index</a>
+                    <a href="/research.html#future-heat-stress">Future Heat Stress</a>
+                    <a href="/research/publications.html">Publications / Presentations</a>
+                </div>
+            </div>
+
+            <!-- ClimaCoder Dropdown -->
+            <div class="dropdown">
+                <a href="/climacoder.html">ClimaCoder</a>
+                <div class="dropdown-content">
+                    <a href="/climacoder.html#team">Team</a>
+                    <div class="dropdown-submenu">
+                        <a href="#">Research ▸</a>
+                        <div class="dropdown-submenu-content">
+                            <a href="/climacoder/countries/belize.html">Belize</a>
+                            <a href="/climacoder/countries/guatemala.html">Guatemala</a>
+                            <a href="/climacoder/countries/honduras.html">Honduras</a>
+                            <a href="/climacoder/countries/el-salvador.html">El Salvador</a>
+                            <a href="/climacoder/countries/nicaragua.html">Nicaragua</a>
+                            <a href="/climacoder/countries/costa-rica.html">Costa Rica</a>
+                            <a href="/climacoder/countries/panama.html">Panama</a>
+                            <a href="/climacoder/countries/mexico.html">Mexico</a>
+                        </div>
+                    </div>
+                    <a href="/climacoder/writing.html">Writing</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Publications & Presentations</h1>
+
+        <div class="intro">
+            <p>
+                Selected publications, presentations, and technical reports on heat stress,
+                climate adaptation, and environmental engineering.
+            </p>
+        </div>
+
+        <h2 class="section-title">Publications</h2>
+
+        <div class="publication-list">
+            <div class="publication-card">
+                <h3>Get the heat index right: An important first step to protect people from heatwaves</h3>
+                <div class="publication-meta">
+                    Down to Earth, June 2024
+                </div>
+                <p>
+                    Discussion of the importance of accurate heat index measurement for public health
+                    protection during extreme heat events.
+                </p>
+            </div>
+
+            <div class="publication-card">
+                <h3>Primer on heat stress: Causes, impacts, and solutions</h3>
+                <div class="publication-meta">
+                    India Energy & Climate Center (IECC), July 2024
+                </div>
+                <p>
+                    Comprehensive primer covering the science of heat stress, its health and economic
+                    impacts, and evidence-based adaptation strategies.
+                </p>
+            </div>
+
+            <div class="publication-card">
+                <h3>Passive cooling strategies to enhance resilience design of a cooling shelter in India</h3>
+                <div class="publication-meta">
+                    ASim2024 Conference (with Wu et al.), September 2024
+                </div>
+                <p>
+                    Analysis of passive cooling approaches for designing climate-resilient cooling
+                    shelters in Indian communities.
+                </p>
+            </div>
+        </div>
+
+        <h2 class="section-title">Presentations</h2>
+
+        <div class="publication-list">
+            <div class="publication-card">
+                <h3>Extended Heat Index (EHI) for India</h3>
+                <div class="publication-meta">
+                    Research Presentation, UC Berkeley, 2024
+                </div>
+                <p>
+                    Presentation on applying the Extended Heat Index framework to assess heat stress
+                    risks across Indian districts.
+                </p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; <span id="year"></span> ELİF KILIÇ. All rights reserved.</p>
+    </footer>
+
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
